:bug: :cookie: Added a getUrl Method that gets the image uploaded and renders it to the modal.

--- a/libs/features/convs-mgr/stories/home/src/lib/modals/create-bot-modal/create-bot-modal.component.html
+++ b/libs/features/convs-mgr/stories/home/src/lib/modals/create-bot-modal/create-bot-modal.component.html
@@ -33,7 +33,7 @@
       </div>
 
     </div>
-
+    <img *ngIf="storyHasImage" [src]="getImageUrl()" alt="Selected Image" />
     <mat-error>
       <span *ngIf="!fileSizeIsValid">
         The file size is too large. Please upload a file smaller than 1MB.
